@@ -1,23 +1,29 @@
 package com.example.library.category;
 
+import com.example.library.author.Author;
+import com.example.library.book.Book;
 import com.example.library.book.BookRepository;
 import com.example.library.dto.Category.CategoryBookResponse;
 import com.example.library.dto.Category.CategoryRequest;
 import com.example.library.dto.Category.CategoryResponse;
 import com.example.library.exception.AppException;
 import com.example.library.exception.ErrorCode;
+import jakarta.transaction.Transactional;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 @Slf4j
 public class CategoryService {
@@ -25,8 +31,13 @@ public class CategoryService {
     CategoryMapper categoryMapper;
     BookRepository bookRepository;
 
+    @PreAuthorize("hasRole('LIBRARIAN')")
     public CategoryResponse create(CategoryRequest request) {
         Category category = categoryMapper.toCategory(request);
+
+        if(categoryRepository.existsByName(request.getName())) {
+            throw new AppException(ErrorCode.CATEGORY_ALREADY_EXISTS);
+        }
 
         try {
             category = categoryRepository.save(category);
@@ -36,17 +47,22 @@ public class CategoryService {
         return categoryMapper.toCategoryResponse(category);
     }
 
+    @PreAuthorize("hasRole('LIBRARIAN')")
     public List<CategoryResponse> getAll() {
-        var category = categoryRepository.findAll();
-        return category.stream().map(categoryMapper::toCategoryResponse).toList();
+        var categories = categoryRepository.findAll();
+        return categories.stream()
+                .sorted(Comparator.comparing(Category::getName))
+                .map(categoryMapper::toCategoryResponse)
+                .toList();
     }
 
-    public CategoryResponse getDetails(String categoryID) {
-        Category category = categoryRepository.findById(categoryID)
-                .orElseThrow(() ->  new AppException(ErrorCode.CATEGORY_NOT_FOUND));
+    @PreAuthorize("hasRole('LIBRARIAN')")
+    public CategoryResponse getDetails(String categoryId) {
+        Category category = findCategoryById(categoryId);
         return categoryMapper.toCategoryResponse(category);
     }
 
+    @PreAuthorize("hasRole('ADMIN')")
     public List<CategoryBookResponse> getCategoryStatistics() {
         List<Category> categories = categoryRepository.findAll();
         return categories.stream()
@@ -54,20 +70,38 @@ public class CategoryService {
                     long bookCount = bookRepository.countByCategories(category);
                     return new CategoryBookResponse(category.getName(), bookCount);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public CategoryResponse update(String categoryID, CategoryRequest request) {
-        Category category = categoryRepository.findById(categoryID)
-                .orElseThrow(() -> new AppException(ErrorCode.CATEGORY_NOT_FOUND));
+    @PreAuthorize("hasRole('LIBRARIAN')")
+    public CategoryResponse update(String categoryId, CategoryRequest request) {
+        Category category =  findCategoryById(categoryId);
+
+        // Check if the new name already exists (and is not the current category's name)
+        if (categoryRepository.existsByName(request.getName()) &&
+                !category.getName().equals(request.getName())) {
+            throw new AppException(ErrorCode.CATEGORY_ALREADY_EXISTS);
+        }
 
         categoryMapper.updateCategoryFromRequest(request, category);
         category = categoryRepository.save(category);
         return categoryMapper.toCategoryResponse(category);
     }
 
+    @PreAuthorize("hasRole('LIBRARIAN')")
+    public void deleteCategory(String categoryId) {
+        Category category = findCategoryById(categoryId);
+        List<Book> books = bookRepository.findByCategoriesContaining(category);
 
-    public void delete(String categoryID) {
-        categoryRepository.deleteById(categoryID);
+        for (Book book : books)
+            book.getCategories().remove(category);
+
+        bookRepository.saveAll(books);
+        categoryRepository.delete(category);
+    }
+
+    public Category findCategoryById(String categoryId) {
+        return categoryRepository.findById(categoryId)
+                .orElseThrow(() -> new AppException(ErrorCode.CATEGORY_NOT_FOUND));
     }
 }
